<resources>
    <string name="app_name">Minggu 7</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="fullname">Fullname</string>
    <string name="signup">SignUp</string>
    <string name="loginhere">Already have an account? <u>Login</u></string>
    <string name="signuphere">Create a new account? SignUp</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="error_while_logging_in">Error while logging in</string>
    <string name="registration">Registration</string>
    <string name="enter_name">Enter name</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="fetch_user">Fetch user</string>
    <string name="click_here_to_register">Click Here to Register</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_nim">Enter Nim</string>
    <string name="pilih_program_studi">Pilih Program Studi</string>
    <string name="pilih_kelas">Pilihlah Kelas</string>
    <string name="enter_nama">Enter Nama</string>
    <string name="nim">Nim</string>
    <string name="enter_program_studi">Enter Program Studi</string>
    <string name="enter_semester">Enter Semester</string>
    <string name="enter_no_telp">Enter No Telp</string>
    <string-array name="spinnerjenis_kelamin">
        <item>laki_laki</item>
        <item>perempuan</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="halo_ini_notifikasi">Halo ini Notifikasi!</string>
    <string name="halo_ini_beranda">Halo ini Beranda!</string>
</resources>