<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFF6F6"
    tools:context=".MainActivity">

<TextView
    android:id="@+id/nama"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:textSize="20sp"
    android:text="@string/name"
    android:layout_marginTop="50dp"
    android:background="@color/white"
    android:layout_marginHorizontal="20dp" />

    <TextView
        android:id="@+id/nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/nim"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_marginHorizontal="20dp" />

        <Button
            android:id="@+id/logout"
            android:text="@string/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <TextView
        android:visibility="gone"
        android:id="@+id/fetchResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_marginHorizontal="20dp" />

    <Button
        android:id="@+id/fetchProfile"
        android:text="@string/fetch_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>